--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-carouselamos": "^3.2.0",
+    "ngx-toastr": "^8.4.0",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
